# websocket-horizontal-scale

./: .env  Cargo.toml  Dockerfile  chat.db  docker-compose.yml  readme.md
data/: chat.db
migrations/: 20251227200125_init.sql
nginx/: nginx.conf
src/: bootstrap.rs  event.rs  main.rs  state.rs
src/db/: event.rs  mod.rs  pool.rs
src/events/: handler.rs  mod.rs  replay.rs
src/redis/: lock.rs  mod.rs  publisher.rs  subscriber.rs
src/ws/: handler.rs  messages.rs  mod.rs  session.rs
